@@ -1,3 +1,5 @@
+/*	$NetBSD: infblock.c,v 1.2 1996/09/13 00:30:08 cgd Exp $	*/
+
 /* infblock.c -- interpret and process block types to last block
  * Copyright (C) 1995-1996 Mark Adler
  * For conditions of distribution and use, see copyright notice in zlib.h 
