@@ -1,3 +1,5 @@
+/*	$NetBSD: inftrees.c,v 1.2 1996/09/13 00:30:36 cgd Exp $	*/
+
 /* inftrees.c -- generate Huffman trees for efficient decoding
  * Copyright (C) 1995-1996 Mark Adler
  * For conditions of distribution and use, see copyright notice in zlib.h 
