@@ -1,9 +1,9 @@
+/*	$NetBSD: zconf.h,v 1.3 1996/09/13 00:30:47 cgd Exp $	*/
+
 /* zconf.h -- configuration of the zlib compression library
  * Copyright (C) 1995-1996 Jean-loup Gailly.
  * For conditions of distribution and use, see copyright notice in zlib.h 
  */
-
-/* $Id: zconf.h,v 1.2 1996/09/12 19:33:53 gwr Exp $ */
 
 #ifndef _ZCONF_H
 #define _ZCONF_H
