@@ -1,9 +1,9 @@
+/*	$NetBSD: zutil.c,v 1.2 1996/09/13 00:30:50 cgd Exp $	*/
+
 /* zutil.c -- target dependent utility functions for the compression library
  * Copyright (C) 1995-1996 Jean-loup Gailly.
  * For conditions of distribution and use, see copyright notice in zlib.h 
  */
-
-/* $Id: zutil.c,v 1.1.1.1 1996/09/12 15:33:10 gwr Exp $ */
 
 #include <stdio.h>
 
